added widget to the top position of the html page

--- a/widget.html
+++ b/widget.html
@@ -3,8 +3,12 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="widget.css">
 	<script src="widget.js"></script>
+	<script type="text/javascript" async="async" src="https://widgets.outbrain.com/outbrain.js"></script>
 </head>
 <body>
 	<ul id="widget_squares_container"></ul>
+	<br>
+	<div class="OUTBRAIN" data-src="https://www.betootaadvocate.com/humans-of-betoota/wealthy-older-man-begins-wearing-round-spectacles-in-declaration-of-his-left-wing-views/" data-widget-id="AR_1"></div>
+
 </body>
 </html>
