added outbrain widget to the html test page

--- a/widget.html
+++ b/widget.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="widget.css">
+	<script src="foundation.core.js"></script>
+	<script src="foundation.sticky.js"></script>
 	<script src="widget.js"></script>
 	<script type="text/javascript" async="async" src="https://widgets.outbrain.com/outbrain.js"></script>
 </head>
