widget is skicked at the top of the page

--- a/shoes_modified.html
+++ b/shoes_modified.html
@@ -272,12 +272,15 @@ loadFacebookScriptFrameworkAsync({appId: 146327295405912, xfbml: true
 
 </script>
 
-		
-
+<!-- squares sticky contaner -->
+<div data-sticky-container>
+	<div class="sticky squares_container" data-sticky data-margin-top="0">
+		<ul id="widget_squares_container" class="thumbnail"></ul>
+	</div>
+</div>
 
 <div class="shoes-homepage-header-component shoes-homepage-responsive-css">
     <div class="full-width">
-    <ul id="widget_squares_container"></ul>
     <div class="grid-x grid-padding-x">
         <div class="large-12 cell shoes-homepage-header-component__prop-banner text-center">
             <div class="grid-container">
@@ -288,8 +291,7 @@ loadFacebookScriptFrameworkAsync({appId: 146327295405912, xfbml: true
     <div class="shoes-homepage-promo-banner-component lazyload-pbar">
     </div>
 </div>
-    <div class="shoes-homepage-header-component-sticky-container sticky" data-sticky data-top-anchor="90" data-margin-top="0">
-    	<!--ul id="widget_squares_container"></ul-->
+    <div class="shoes-homepage-header-component-sticky-container sticky" data-sticky data-top-anchor="90" data-margin-top="3">
       <div class="grid-x">
         <div class="large-12 medium-12 small-12">
           <div class="grid-container">
